--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Sep 01 17:37:27 CDT 2016
-sdk.dir=C\:\\Users\\Magma\\AppData\\Local\\Android\\sdk
+sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\sdk
