--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 01 17:37:27 CDT 2016
-sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\sdk
+#Thu Oct 13 16:09:23 CDT 2016
+ndk.dir=/Users/Josep/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/Josep/Library/Android/sdk
