--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Oct 13 16:09:23 CDT 2016
-ndk.dir=/Users/Josep/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/Josep/Library/Android/sdk
+sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\sdk
