--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Oct 13 16:09:23 CDT 2016
-sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\sdk
+sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\sdk
+
