se arregla acerca de, y se cambian los botones de opciones(pero el boton back en la pantalla de opciones no hace nada)

--- a/local.properties
+++ b/local.properties
@@ -8,5 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Oct 13 16:09:23 CDT 2016
-ndk.dir=/Users/Josep/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/Josep/Library/Android/sdk
+sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\sdk
+
