--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 13 16:09:23 CDT 2016
-sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\sdk
-
+#Thu Nov 03 16:50:38 CST 2016
+sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\Sdk
