--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Nov 03 16:50:38 CST 2016
-sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\Sdk
