--- a/ios/robovm.properties
+++ b/ios/robovm.properties
@@ -1,5 +1,5 @@
 app.version=1.0
-app.id=com.mygdx.game
+app.id=mx.josep.iphone
 app.mainclass=com.mygdx.game.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
