--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 17 17:57:02 CST 2016
-sdk.dir=C\:\\Users\\marco\\AppData\\Local\\Android\\Sdk
+#Sun Nov 20 17:33:50 CST 2016
+sdk.dir=C\:\\Users\\LUISRICARDO\\AppData\\Local\\Android\\Sdk
